--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "html-to-pdfmake": "^1.0.7",
+    "pdfmake": "^0.1.59",
+    "simplemde": "^1.11.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
